--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,11 @@
-<p>header works!</p>
-{{title}}
+<ul>
+    <li>
+       <a routerLink="/about">about</a> 
+    </li>
+    <li>
+       <a routerLink="/contact">contact</a> 
+    </li>
+    <li>
+       <a routerLink="/">home</a> 
+    </li>
+</ul>
